[project]
name = "meraki-heatmap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "matplotlib>=3.10.9",
    "meraki>=3.2.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
